samples/_failures_safe/1761730733_ef1057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d93e618.c: In function ‘main’:
./samples/SAFE/__tmp_9d93e618.c:181:17: error: expected declaration or statement at end of input
  181 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_9d93e618.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d93e618.c:181:17: error: expected declaration or statement at end of input
